# model-and-prompt-from-metadata

./: .gitignore  README.ja.md  README.md  README.zh.md  __init__.py  metadata_checkpoint_node.py  pyproject.toml
.github/workflows/: publish.yml
js/: clip_text_encode_edit_plus.js  i18n.js  metadata_checkpoint.js  metadata_lora.js  metadata_prompt.js  workflow_utils.js
